--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "prettier": "prettier --write ."
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.59.18",
     "clsx": "^2.1.1",
     "framer-motion": "^11.11.9",
     "next": "14.2.14",
