--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/js-cookie": "^3.0.6",
     "axios": "^1.7.7",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "framer-motion": "^11.11.9",
     "js-cookie": "^3.0.5",
     "next": "14.2.14",
