HOTFIX: CI/CD 환경 변수 추가

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -47,7 +47,7 @@ jobs:
           port: ${{ secrets.NCP_PORT }}
           script: |
             docker pull ${{ secrets.NCP_CONTAINER_REGISTRY }}/cnergy-frontend:${{ github.sha }}
-            
+
             if [ -z "$GITHUB_SHA" ]; then
               echo "GITHUB_SHA 환경 변수가 설정되지 않았습니다. 최신 이미지를 사용합니다."
               IMAGE_ID=$(docker images --format "{{.ID}}" | head -n 1)
@@ -58,5 +58,14 @@ jobs:
 
             docker stop cnergy-frontend || true
             docker rm cnergy-frontend || true
-            docker run -d -p 3000:3000 --name cnergy-frontend $IMAGE_ID
+            docker run -d \ 
+            -p 3000:3000 \ 
+            --name cnergy-frontend \
+            -e NEXT_PUBLIC_API_URL=${{ secrets.NEXT_PUBLIC_API_URL }} \
+            -e NEXT_PUBLIC_IMAGE_URL=${{ secrets.NEXT_PUBLIC_IMAGE_URL }} \
+            -e NEXT_PUBLIC_KAKAO_API_KEY=${{ secrets.NEXT_PUBLIC_KAKAO_API_KEY }} \
+            -e NEXT_PUBLIC_KAKAO_KEY=${{ secrets.NEXT_PUBLIC_KAKAO_KEY }} \
+            -e NEXT_PUBLIC_MASTER_TOKEN=${{ secrets.NEXT_PUBLIC_MASTER_TOKEN }} \
+            $IMAGE_ID
+
             docker image prune -f
