--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-kakao-maps-sdk": "^1.1.27",
     "swiper": "^11.1.15",
     "tailwind-merge": "^2.5.3",
+    "tailwind-scrollbar-hide": "^1.1.7",
     "zustand": "^5.0.0"
   },
   "devDependencies": {
